# $Id$
#

adminrootdir = ${pkgdatadir}/admin-root
adminroot_DATA = ftr.html linkOpaque.gif status.html aspl-license.txt \
	gpl-license.txt linkTransparent.gif config-update.html hdr.html mt-daapd.css \
	mt-daapd.png config.html index.html required.gif gpl-license.html \
	aspl-license.html

EXTRA_DIST = ftr.html linkOpaque.gif status.html aspl-license.txt \
	gpl-license.txt linkTransparent.gif config-update.html hdr.html mt-daapd.css \
	mt-daapd.png config.html index.html required.gif gpl-license.html \
	aspl-license.html