# $Id$
#

adminrootdir = ${pkgdatadir}/admin-root
adminroot_DATA = ftr.html linkOpaque.gif status.html aspl-license.txt \
	gpl-license.txt linkTransparent.gif config-update.html hdr.html \
	mt-daapd.css mt-daapd.png config.html index.html required.gif \
	gpl-license.html aspl-license.html thanks.html feedback.html \
	playlist.html playlist.js smart.html smart.js DAAPApplet-0.1.jar \
	smartpopup.html applet.html mt-daapd.js CREDITS

EXTRA_DIST = ftr.html linkOpaque.gif status.html aspl-license.txt \
	gpl-license.txt linkTransparent.gif config-update.html hdr.html \
	mt-daapd.css mt-daapd.png config.html index.html required.gif \
	gpl-license.html aspl-license.html thanks.html feedback.html \
	playlist.html playlist.js smart.html smart.js DAAPApplet-0.1.jar \
	smartpopup.html applet.html mt-daapd.js CREDITS

