if COND_WEBINTERFACE
WEBINTERFACE_SRC = \
	index.html
endif


htdocsdir = $(datadir)/owntone/htdocs

dist_htdocs_DATA = \
	$(WEBINTERFACE_SRC) \
	android-chrome-192x192.png \
	android-chrome-512x512.png \
	apple-touch-icon.png \
	browserconfig.xml \
	favicon.ico \
	favicon-16x16.png \
	favicon-32x32.png \
	mstile-150x150.png \
	safari-pinned-tab.svg \
	site.webmanifest

if COND_WEBINTERFACE
htdocsassetsdir = $(datadir)/owntone/htdocs/assets

dist_htdocsassets_DATA = \
	assets/ContentWithHeading.js \
	assets/ContentWithHero.js \
	assets/ControlDropdown.js \
	assets/CoverArtwork.js \
	assets/GroupByList.js \
	assets/IndexButtonList.js \
	assets/ListAlbums.js \
	assets/ListArtists.js \
	assets/ListComposers.js \
	assets/ListGenres.js \
	assets/ListItemAlbumSpotify.js \
	assets/ListItemPlaylistSpotify.js \
	assets/ListPlaylists.js \
	assets/ListTracks.css \
	assets/ListTracks.js \
	assets/ModalDialogAlbum.js \
	assets/ModalDialogAlbumSpotify.js \
	assets/ModalDialogArtist.js \
	assets/ModalDialogArtistSpotify.js \
	assets/ModalDialogComposer.js \
	assets/ModalDialogGenre.js \
	assets/ModalDialogPlaylist.js \
	assets/ModalDialogPlaylistSpotify.js \
	assets/ModalDialogQueueItem.js \
	assets/ModalDialogTrackSpotify.js \
	assets/PageAbout.js \
	assets/PageAlbum.js \
	assets/PageAlbumSpotify.js \
	assets/PageAlbums.js \
	assets/PageArtist.js \
	assets/PageArtistSpotify.js \
	assets/PageArtistTracks.js \
	assets/PageArtists.js \
	assets/PageAudiobooksAlbum.js \
	assets/PageAudiobooksAlbums.js \
	assets/PageAudiobooksArtist.js \
	assets/PageAudiobooksArtists.js \
	assets/PageAudiobooksGenres.js \
	assets/PageComposerAlbums.js \
	assets/PageComposerTracks.js \
	assets/PageComposers.js \
	assets/PageFiles.js \
	assets/PageGenreAlbums.js \
	assets/PageGenreTracks.js \
	assets/PageGenres.js \
	assets/PageMusic.js \
	assets/PageMusicRecentlyAdded.js \
	assets/PageMusicRecentlyPlayed.js \
	assets/PageMusicSpotify.js \
	assets/PageMusicSpotifyFeaturedPlaylists.js \
	assets/PageMusicSpotifyNewReleases.js \
	assets/PageNowPlaying.css \
	assets/PageNowPlaying.js \
	assets/PagePlaylistFolder.js \
	assets/PagePlaylistTracks.js \
	assets/PagePlaylistTracksSpotify.js \
	assets/PagePodcast.js \
	assets/PagePodcasts.js \
	assets/PageQueue.js \
	assets/PageRadioStreams.js \
	assets/PageSearchLibrary.js \
	assets/PageSearchSpotify.js \
	assets/PageSettingsArtwork.js \
	assets/PageSettingsOnlineServices.js \
	assets/PageSettingsRemotesOutputs.js \
	assets/PageSettingsWebinterface.js \
	assets/SettingsCheckbox.js \
	assets/TabsAudiobooks.js \
	assets/TabsMusic.js \
	assets/TabsSearch.js \
	assets/TabsSettings.js \
	assets/index.css \
	assets/index.js \
	assets/spotify-web-api.js \
	assets/vue-eternal-loading.js
endif
